--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.application.name=product
+spring.datasource.url=jdbc:mysql://mysql-db:3306/productservicedb
+spring.datasource.username=productdbuser
+spring.datasource.password=cokgizlisifre
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=create-drop
+
 
