--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,71 @@
 services:
-  product-service:
-    build: ./product-service
 
+  config-server:
+    build: ./config-server # Path to Dockerfile context
     ports:
-      - "8080:8080"
-
-    #entrypoint:
-
+      - "8888:8888"
+    volumes:
+      - ./config-server/config-repo:/etc/config-repo # Mount your local config-repo
+      # Ensure Config Server's search-locations points to /etc/config-repo
+    environment:
+      # If config server's search-locations is parameterized or needs env var
+      - SPRING_CLOUD_CONFIG_SERVER_NATIVE_SEARCH_LOCATIONS=file:///etc/config-repo
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8888/actuator/health"]
+      interval: 15s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
     depends_on:
       mysql-db:
         condition: service_healthy
+      eureka-server:
+        condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+
+  eureka-server:
+    build: ./eureka-server
+    ports:
+      - "8761:8761"
+    healthcheck:
+      test: [ "CMD-SHELL", "curl http://localhost:8761/actuator/health" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+
+  eureka-client:
+     build: ./eureka-client
+     depends_on:
+       eureka-server:
+        condition: service_healthy
+     deploy:
+       resources:
+         limits:
+           memory: 256M
+
+  product-service:
+    build: ./product-service
+    ports:
+      - "8080:8080"
+    depends_on:
+      mysql-db:
+        condition: service_healthy
+      eureka-server:
+        condition: service_healthy
+      config-server:
+        condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          memory: 256M
 
   mysql-db:
     image: mysql:8.0
