--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.application.name=product
+spring.application.name=product-service
+spring.config.import=optional:configserver:http://config-server:8888
 spring.datasource.url=jdbc:mysql://mysql-db:3306/productservicedb
 spring.datasource.username=productdbuser
 spring.datasource.password=cokgizlisifre
@@ -6,5 +7,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create-drop
+eureka.client.serviceUrl.defaultZone=http://non-eureka-server:8761/eureka/
+#registerWithEureka: true (varsayilan) - bu ornegi Eureka'ya kaydet
+# fetchRegistry: true (varsayilan) - Eureka'dan kayit defteri bilgilerini al
+management.endpoints.web.exposure.include=*
+
 
 
