--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,23 @@
 services:
+  api-gateway:
+    build: ./api-gateway
+    ports:
+      - "9080:8080"
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8080/actuator/health"]
+      interval: 15s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+    depends_on:
+      eureka-server:
+        condition: service_healthy
+      config-server:
+        condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          memory: 256M
 
   config-server:
     build: ./config-server # Path to Dockerfile context
@@ -11,7 +30,7 @@ services:
       # If config server's search-locations is parameterized or needs env var
       - SPRING_CLOUD_CONFIG_SERVER_NATIVE_SEARCH_LOCATIONS=file:///etc/config-repo
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8888/actuator/health"]
+      test: ["CMD-SHELL", "curl http://localhost:8888/actuator/health"]
       interval: 15s
       timeout: 5s
       retries: 5
@@ -53,8 +72,8 @@ services:
 
   product-service:
     build: ./product-service
-    ports:
-      - "8080:8080"
+#    ports:
+#      - "8080:8080"
     depends_on:
       mysql-db:
         condition: service_healthy
