--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -11,6 +11,7 @@ eureka.client.serviceUrl.defaultZone=http://non-eureka-server:8761/eureka/
 #registerWithEureka: true (varsayilan) - bu ornegi Eureka'ya kaydet
 # fetchRegistry: true (varsayilan) - Eureka'dan kayit defteri bilgilerini al
 management.endpoints.web.exposure.include=*
+logging.level.org.springframework.web=DEBUG
 
 
 
