graana, prometheus, zipkin kuruldu. Distrubite tracing,metrik topama yeteneği mikrosrvislere eklendi.

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -12,6 +12,9 @@ eureka.client.serviceUrl.defaultZone=http://non-eureka-server:8761/eureka/
 # fetchRegistry: true (varsayilan) - Eureka'dan kayit defteri bilgilerini al
 management.endpoints.web.exposure.include=*
 logging.level.org.springframework.web=DEBUG
+management.zipkin.tracing.endpoint=http://zipkin-server:9411/api/v2/spans
+management.tracing.enabled=true
+management.tracing.sampling.probability=1.0
 
 
 
