--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,6 +70,48 @@ services:
          limits:
            memory: 256M
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_INSTALL_PLUGINS=grafana-piechart-panel
+      - GF_USERS_ALLOW_SIGN_UP=false
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./grafana/provisioning:/etc/grafana/provisioning
+    depends_on:
+      - prometheus
+
+  zipkin-server:
+    image: openzipkin/zipkin:3.4
+    ports:
+      - "9411:9411"
+    healthcheck:
+      test: [ "CMD-SHELL", "wget -qO- http://localhost:9411/health || exit 1" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+
   product-service:
     build: ./product-service
 #    ports:
@@ -129,4 +171,6 @@ services:
 
 volumes:
   mysql_data:
+  prometheus_data:
+  grafana_data:
 
