--- a/order-service/src/main/resources/application.yaml
+++ b/order-service/src/main/resources/application.yaml
@@ -23,3 +23,14 @@ management:
     web:
       exposure:
         include: "*"
+  prometheus:
+    metrics:
+      export:
+        enabled: true
+  zipkin:
+    tracing:
+      endpoint: http://zipkin-server:9411/api/v2/spans
+  tracing:
+    enabled: true
+    sampling:
+      probability: 1.0
