--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -112,6 +112,66 @@ services:
         limits:
           memory: 256M
 
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.9.1 # Güncel stabil bir sürüm kullanılıyor
+    container_name: zookeeper
+    ports:
+      - "2181:2181"
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    depends_on:
+      #      - elasticsearch
+      mysql-db:
+        condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+
+  kafka:
+    image: confluentinc/cp-kafka:7.9.1 # Güncel stabil bir sürüm kullanılıyor
+    container_name: kafka
+    ports:
+      - "9092:9092" # Docker ağı dışındaki istemciler için
+      - "29092:29092" # Docker ağı içindeki istemciler için (örn. diğer konteynerler)
+    depends_on:
+      - zookeeper
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_CONFLUENT_LICENSE_TOPIC_REPLICATION_FACTOR: 1 # Confluent'e özgü
+      KAFKA_CONFLUENT_BALANCER_TOPIC_REPLICATION_FACTOR: 1 # Confluent'e özgü
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1             # Confluent'e özgü
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1  # Confluent'e özgü
+    deploy:
+      resources:
+        limits:
+          memory: 1024M
+
+  akhq:
+    image: tchiotludo/akhq:latest
+    container_name: akhq
+    ports:
+      - "8988:8080" # AKHQ UI, ana makine portu 8088'de erişilebilir olacak
+    environment:
+      AKHQ_CONFIGURATION: |
+        akhq:
+          connections:
+            docker-kafka-cluster:
+              properties:
+                bootstrap.servers: "kafka:29092" # AKHQ için Kafka dahili Docker ağ adresi
+    depends_on:
+      - kafka
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+
   product-service:
     build: ./product-service
 #    ports:
@@ -148,6 +208,34 @@ services:
   #      condition: service_healthy
     #      keycloak:
     #        condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+
+  inventory-service:
+    build: ./inventory-service
+    ports:
+      - "8100:8080"
+    depends_on:
+      mysql-db:
+        condition: service_healthy
+      config-server:
+        condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+
+  payment-service:
+    build: ./payment-service
+    ports:
+      - "8110:8080"
+    depends_on:
+      mysql-db:
+        condition: service_healthy
+      config-server:
+        condition: service_healthy
     deploy:
       resources:
         limits:
