--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -172,6 +172,31 @@ services:
         limits:
           memory: 256M
 
+  keycloak:
+     image: quay.io/keycloak/keycloak:25.0
+     container_name: keycloak
+     command: start-dev
+     environment:
+       KEYCLOAK_ADMIN: admin
+       KEYCLOAK_ADMIN_PASSWORD: admin
+       KEYCLOAK_DATABASE_VENDOR: dev-file
+       KEYCLOAK_EXTRA_ARGS: --health-enabled=true
+       KEYCLOAK_HOSTNAME: keycloak
+       KEYCLOAK_PROXY_ADDRESS_FORWARDING: true
+     ports:
+        - "8080:8080"
+        - "9000:9000"
+     depends_on:
+        mysql-db:
+          condition: service_healthy
+
+     healthcheck: # Added healthcheck
+        test: [ "CMD", "curl", "-fsS", "http://localhost:9000/health/ready" ]
+        interval: 20s
+        timeout: 5s
+        retries: 5
+        start_period: 40s
+
   product-service:
     build: ./product-service
 #    ports:
@@ -235,6 +260,20 @@ services:
       mysql-db:
         condition: service_healthy
       config-server:
+        condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+
+  user-service:
+    build: ./user-service
+    ports:
+      - "8089:8080"
+    depends_on:
+      mysql-db:
+        condition: service_healthy
+      eureka-server:
         condition: service_healthy
     deploy:
       resources:
