--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -15,6 +15,7 @@ logging.level.org.springframework.web=DEBUG
 management.zipkin.tracing.endpoint=http://zipkin-server:9411/api/v2/spans
 management.tracing.enabled=true
 management.tracing.sampling.probability=1.0
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/realms/microservices
 
 
 
